# ThinkingTest

./: .env.example  .gitignore  DOCKER.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt
.cursor/: bias-psychologist-MVP.md  cursor-ai-prompt.md
.github/workflows/: deploy.yml  python-app.yml
app/lambda/: handler.py  requirements.txt
backend/: .dockerignore  .env.example  .gitignore  =4.0.0  Dockerfile  README.md  pytest.ini  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  baseline.py  evaluation.py  heuristic.py  recommendation.py
backend/app/routers/: baselines.py  evaluations.py  heuristics.py  recommendations.py
backend/app/schemas/: __init__.py  baseline.py  evaluation.py  heuristic.py  recommendation.py  report.py
backend/app/services/: heuristic_detector.py  recommendation_generator.py  report_generator.py  statistical_analyzer.py
backend/app/utils/: test_data_generator.py
backend/tests/: README.md  __init__.py  conftest.py  test_api_evaluations.py  test_api_recommendations.py  test_api_reports.py  test_business_logic.py  test_data_validation.py  test_error_handling.py
config/: app.yaml  logging.yaml  models.yaml  probes.yaml
examples/: README.md  ai_testing_example.py  api_analysis_workflow.ipynb  basic_api_usage.py  batch_evaluation.py  integration_patterns.py  longitudinal_tracking.py  quickstart.py  requirements.txt
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Badge.tsx  Card.tsx  ConfigurationPanel.tsx  FindingDetailsDialog.tsx  HeuristicCard.tsx  HeuristicsTab.tsx  Layout.tsx  LoadingSpinner.tsx  OverviewTab.tsx  RecommendationsTab.tsx
frontend/src/pages/: CreateEvaluation.tsx  Dashboard.tsx  EvaluationDetail.tsx
frontend/src/services/: api.ts
frontend/src/types/: bias.ts  index.ts
frontend/src/utils/: constants.ts  format.ts
infra/: README.md  deploy.ps1  deploy.sh
infra/envs/dev/: main.tf  outputs.tf  variables.tf
infra/envs/prod/: main.tf  outputs.tf  variables.tf
infra/envs/stage/: main.tf  outputs.tf  variables.tf
infra/envs/test/: main.tf  outputs.tf  variables.tf
infra/modules/app-lambda/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/network/: main.tf  outputs.tf  variables.tf
scripts/: demo_randomization.py  demo_response_formats.py  setup_db.py  sso-login.ps1  sso-login.sh  test_env_config.py  test_env_simple.py  test_logging.py
src/ai_bias_psych/: __init__.py  cli.py  config.py  data_manager.py  env_config.py  logging_config.py  main.py
src/ai_bias_psych/analytics/: __init__.py  scoring.py  sentiment.py  statistics.py
src/ai_bias_psych/api/: __init__.py  dashboard.py  probes.py  reports.py
src/ai_bias_psych/llm/: __init__.py  anthropic_client.py  base.py  ollama_client.py  openai_client.py
src/ai_bias_psych/probes/: __init__.py  anchoring.py  availability.py  base.py  base_rate.py  battery_manager.py  confirmation.py  conjunction.py  format_examples.py  framing.py  optimism.py  overconfidence.py  prospect_theory.py  randomization.py  response_formats.py  sunk_cost.py  types.py
src/ai_bias_psych/storage/: __init__.py  database.py  export.py  jsonl_logger.py
src/ai_bias_psych/web/: __init__.py
tasks/: prd-ai-bias-psychologist-v01.md  tasks-prd-ai-bias-psychologist-v01.md
tests/: __init__.py  test_base_probe.py  test_basic.py  test_randomization.py  test_response_formats.py
